tests/baselines/reference/jsdocAugments_notAClass.errors.txt
/b.js(3,10): error TS8022: JSDoc '@augments' is not attached to a class.


==== /b.js (1 errors) ====
    class A {}
    /** @augments A */
    function b() {}
             ~
!!! error TS8022: JSDoc '@augments' is not attached to a class.
    